qlcplus (4.13.2) stable; urgency=low

  * engine: fix flashing fade out
  * engine: add stopOnExit, waitFunctionStart and waitFunctionStop commands to Script - see documentation (thanks to ldebs)
  * UI/Fixture Manager: limit the number of RGB panel columns for RGBW to avoid crash
  * UI/Show Manager: show step notes on the timeline (thanks to anarchid)
  * Web Access: fix grand master stopping running functions
  * Web Access: fix simple desk not resetting the current universe
  * RGB scripts: added 'Sine Wave' script
  * RGB scripts: fix Vertical Fall not allowing changing color when cloned
  * New fixtures: GLP Impression X5, Ayrton Rivale Profile (thanks to Masatoshi Fujino)
  * New fixture: Eurolite LED Mini Strobe Cluster SMD 48 (thanks to Oliver)
  * New fixture: Ayra Compar Kit 3 (thanks to Robert)
  * New fixtures: Acme Pixel Line IP, Ayrton Domino LT (thanks to Yestalgia)
  * New fixture: GLP JDC1 (thanks to Flo Edelmann)
  * New fixture: Shehds 2 Eyes 200W LED COB Cool Warm White (thanks to Devsider)

  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 24 Nov 2024 18:19:20 +0200

qlcplus (4.13.1) stable; urgency=low

  * engine: fix blackout not working
  * engine: include relative EFX in blackout
  * engine: fix RGB Matrix clone control mode
  * Show Manager: improve resume after pause
  * Show Manager: don't freeze on infinite duration Chasers/Sequences
  * Virtual Console: fix OSC feedback regression
  * Virtual Console/Slider: add an optional button to flash in playback mode
  * Virtual Console/XY Pad: copy presets when cloning (thanks to Hans-Jürgen Tappe)
  * Plugins/DMX USB: restore Vince DMX512 output (thanks to Jérôme Lebleu)
  * Plugins/HID: add merger mode for DMX devices (thanks to qfulmina)
  * Plugins/HID: improve devices naming (thanks to qfulmina)
  * Web Access: added getWidgetSubIdList API and Animation widget sub-control example (API test page updated)
  * New fixtures: beamZ BAC500 and BAC506 (thanks to Olivier Michel)