@@ -102,6 +102,8 @@ protected:
       */
     QHash<QString, quint16> m_hashMap;
 
+    QByteArray m_packetLeftOver;
+
     /*********************************************************************
      * Configuration
      *********************************************************************/
